--- a/src/generators/unity_client_generator.cs.erb
+++ b/src/generators/unity_client_generator.cs.erb
@@ -90,8 +90,7 @@ namespace <%= node.namespace %>
 		protected override void ProcessPacket( Packet packet )
 		{
 			switch( (InMessage)packet.Header )
-			{
-				<% for m in node_direction.in_direction.messages.values %>
+			{<% for m in node_direction.in_direction.messages.values %>
 				case InMessage.<%= m.name %>:
 					{<% for p in m.members %>
 						var <%= p.name %> = <%= p.unity_read %><% end %>
