--- a/src/generators/unity_client_generator.cs.erb
+++ b/src/generators/unity_client_generator.cs.erb
@@ -33,6 +33,11 @@ namespace <%= node.namespace %>
 		/// </summary>
 		<%= m.unity_def %>
 		<% end %>
+		public <%= s.name %>( <%= s.members.map { |m| m.unity_param } .join ', ' %> )
+		{<% for m in s.members %>
+			this.<%= m.name %> = <%= m.name %>;<% end %>
+		}
+
 		public void ReadFromPacket( InPacket packet )
 		{<% for m in s.members %>
 			this.<%= m.unity_read %><% end %>
