Modified the C# runtime.

--- a/src/generators/unity_client_generator.cs.erb
+++ b/src/generators/unity_client_generator.cs.erb
@@ -51,22 +51,16 @@ namespace <%= node.namespace %>
 	<% end %>
 	#endregion
 	<% for node_direction in runtime.get_node_directions node, :client %>
-	public class <%= node_direction.class_name %> : Client
-	{
-		public interface IHandler
-		{<% for m in node_direction.in_direction.messages.values %>
-			/// <summary>
-			/// <%= m.doc %>
-			/// </summary><% for p in m.members %>
-			/// <param name="<%= p.name %>"><%= p.doc %></param><% end %>
-			<%= m.unity %>;
-		<% end %>}
+	public abstract class <%= node_direction.class_name %> : Client
+	{<% for m in node_direction.in_direction.messages.values %>
+		/// <summary>
+		/// <%= m.doc %>
+		/// </summary><% for p in m.members %>
+		/// <param name="<%= p.name %>"><%= p.doc %></param><% end %>
+		protected abstract <%= m.unity %>;<% end %>
 
-		private IHandler _handler;
-
-		public <%= node_direction.class_name %>( IHandler handler )
+		public <%= node_direction.class_name %>()
 		{
-			_handler = handler;
 		}
 
 		private enum InMessage
@@ -97,7 +91,7 @@ namespace <%= node.namespace %>
 				case InMessage.<%= m.name %>:
 					{<% for p in m.members %>
 						var <%= p.unity_read %><% end %>
-						_handler.<%= m.name %>( <%= m.unity_param %> );
+						this.<%= m.name %>( <%= m.unity_param %> );
 					}
 					break;<% end %>
 				default:
