--- a/src/lib/generators/unity_client_generator.cs.erb
+++ b/src/lib/generators/unity_client_generator.cs.erb
@@ -69,7 +69,7 @@ namespace <%= node.namespace %>
 		public <%= node_direction.connector_name %>( <%= node_direction.handler_name %> handler )
 		{
 			this.handler = handler;
-			this.policy = PacketProcesPolicy.Discard;
+			this.policy = PacketProcessPolicy.Discard;
 		}
 
 		private enum InMessage
