--- a/src/lib/generators/elixir_server_generator.ex.erb
+++ b/src/lib/generators/elixir_server_generator.ex.erb
@@ -106,8 +106,12 @@ defmodule <%= node.namespace %>.<%= node.elixir_connection %> do
     case header do<% for m in n.in_direction.messages.values %>
       <%= m.elixir_header_name %> -><% for p in m.members %>
         {data, <%= p.elixir_name %>} = <%= p.type.elixir_read node %><% end %>
-        {:ok, state} = handler.<%= m.elixir_name %>(self(), state<%= m.elixir_params %>)
-        process_packet(data, handler, state)<% end %>
+        if byte_size(data) != 0 do
+          stop(self())
+        else
+          {:ok, state} = handler.<%= m.elixir_name %>(self(), state<%= m.elixir_params %>)
+          process_packet(data, handler, state)<% end %>
+        end
     end
   end
 end
