Add 'data_head' in unity_client_generator.cs.erb

--- a/src/lib/generators/unity_client_generator.cs.erb
+++ b/src/lib/generators/unity_client_generator.cs.erb
@@ -66,9 +66,10 @@ namespace <%= node.namespace %>
 
 		public PacketProcessPolicy policy { get; set; }
 
-		public <%= node_direction.connector_name %>( <%= node_direction.handler_name %> handler )
+		public <%= node_direction.connector_name %>( <%= node_direction.handler_name %> handler, string dataHead )
 		{
 			this.handler = handler;
+			this.dataHead = dataHead;
 			this.policy = PacketProcessPolicy.Discard;
 		}
 
