Change the type of 'data_head' from String to Long.

--- a/src/lib/generators/unity_client_generator.cs.erb
+++ b/src/lib/generators/unity_client_generator.cs.erb
@@ -66,7 +66,7 @@ namespace <%= node.namespace %>
 
 		public PacketProcessPolicy policy { get; set; }
 
-		public <%= node_direction.connector_name %>( <%= node_direction.handler_name %> handler, string dataHead )
+		public <%= node_direction.connector_name %>( <%= node_direction.handler_name %> handler, long dataHead )
 		{
 			this.handler = handler;
 			this.dataHead = dataHead;
