--- a/src/lib/generators/elixir_server_generator.ex.erb
+++ b/src/lib/generators/elixir_server_generator.ex.erb
@@ -110,8 +110,8 @@ defmodule <%= node.namespace %>.<%= node.elixir_connection %> do
           stop(self())
         else
           {:ok, state} = handler.<%= m.elixir_name %>(self(), state<%= m.elixir_params %>)
-          process_packet(data, handler, state)<% end %>
-        end
+          process_packet(data, handler, state)
+        end<% end %>
     end
   end
 end
